@@ -1,11 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.476 2005/11/11 01:55:03 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.477 2005/11/12 02:44:09 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
-  10 Nov 2005; Andrew Gaffney <agafney@gentoo.org>
+  11 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/net/server/gliserv.py:
+  basic HTTP auth
+
+  10 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/gliserv.py:
   dynamic module reloading (yipee!)
   send 'Last-Modified' header for real files
